// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FastTagsView empty 1`] = `null`;

exports[`FastTagsView tags for car 1`] = `
<div
  class="fast_tags"
>
  <a
    class="link link_interactive fast_tag_item "
    href="/"
    rel="noopener"
  >
    Омывайка
  </a>
</div>
`;

exports[`FastTagsView tags for client 1`] = `
<div
  class="fast_tags"
>
  <a
    class="link link_interactive fast_tag_item "
    href="/"
    rel="noopener"
  >
    Масло
  </a>
</div>
`;

exports[`FastTagsView tags for client info 1`] = `
<div
  class="fast_tags"
>
  <a
    class="link link_interactive fast_tag_item "
    href="/"
    rel="noopener"
  >
    письмо о штрафе
  </a>
</div>
`;
